# examen_bentoml

./: .gitignore  README.md  bentofile.yaml  bentofile_old.yaml  pyproject.toml
.dvc/: config
data/: processed.dvc  raw.dvc
data/processed/: X_test.pkl  X_train.pkl  y_test.pkl  y_train.pkl
models/: elasticnet-bento-exam.pkl
src/: prepare_data.py
src/examen-bentoml/: load_data.py  params.py  prepare_data.py  service.py  train_model.py
src/examen_bentoml/: load_data.py  params.py  prepare_data.py  service.py  train_model.py
tests/: test_auth.py  test_connect.py  test_pred.py
