[project]
name = "examen_bentoml"
version = "0.1.0"
description = "Exam BentoML"
requires-python = ">=3.12"
dependencies = [
    "bentoml>=1.4.22",
    "jwt>=1.4.0",
    "pandas>=2.3.2",
    "pyjwt>=2.10.1",
    "requests>=2.32.5",
    "scikit-learn>=1.7.1",
]

[build-system]
requires = ["uv_build>=0.8.0,<0.9.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=8.4.1",
]
